[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/enemy/Enemy.png" type="Texture" id=1]
[ext_resource path="res://characters/enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://images/Point_light.png" type="Texture" id=3]
[ext_resource path="res://characters/enemy/EnemyHurt.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.97454, 2.74807 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.833, 2.60776 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.57023, 1.76591 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 21
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0996523, -2.7655 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.0701523, -3.57785 )
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -0.140308, -6.94523 )
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.495298, -5.4572 )
scale = Vector2( 0.566938, 0.566938 )
texture = ExtResource( 3 )
color = Color( 1, 0, 0, 0.607843 )

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2( -9.88053, -4.20448 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 5

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
